polish: Witch's Potion (#2229)
* refactor: modernize

* fix: "Yes." dialog option to start the quest